--- a/ryanschmied-website/package.json
+++ b/ryanschmied-website/package.json
@@ -4,9 +4,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "animate.css": "^3.7.0",
+    "particlesjs": "^2.2.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "reactparticles.js": "^1.1.6",
+    "scrollreveal": "^4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
