--- a/ryanschmied-website/package.json
+++ b/ryanschmied-website/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ryanschmied-website",
-  "homepage": "https://ryanschmied.github.io/website21",
+  "homepage": "https://ryanschmied.github.io/ryanschmiedweb",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,7 +10,8 @@
     "react-dom": "^16.4.1",
     "react-scripts": "1.1.4",
     "reactparticles.js": "^1.1.6",
-    "scrollreveal": "^4.0.0"
+    "scrollreveal": "^4.0.0",
+    "smoothscroll": "^0.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
